Update from https://github.com/folio-winter/folio-2019/commit/1f9b025191fc1d97d96d6c503f09de87ad54d031)

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
 
     <canvas class="canvas js-canvas"></canvas>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3966601-5"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155319408-5"></script>
     <script>
-        window.dataLayer = window.dataLayer || []
-        function gtag(){dataLayer.push(arguments)}
-        gtag('js', new Date())
-        gtag('config', 'UA-3966601-5')
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-155319408-5');
     </script>
 
-<script type="text/javascript" src="bundle.281f0228e7f2600c2c17.js"></script></body>
+
+<script type="text/javascript" src="bundle.cffdc64e33208cc472bb.js"></script></body>
 </html>
