Update from https://github.com/folio-winter/folio-2019/commit/f5ee4fdead61324ee6ba9f30d0e91eb143ba12ed)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     gtag('config', 'UA-155319408-5');
     </script>
 
+    <script>
+    var _mtac = {};
+    (function() {
+        var mta = document.createElement("script");
+        mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+        mta.setAttribute("name", "MTAH5");
+        mta.setAttribute("sid", "500725509");
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(mta, s);
+    })();
+    </script>
 
-<script type="text/javascript" src="bundle.77fcc17658df702a5d64.js"></script></body>
+
+<script type="text/javascript" src="bundle.acca2422fe782e970ae9.js"></script></body>
 </html>
