--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Bruno Simon</title>
+    <title>Winter Chen</title>
     <meta name="description" content="Creative developer living in Paris, freelancer, former lead developer at Immersive Garden, former developer at Uzik and teacher.">
 
     <meta itemprop="name" content="Bruno Simon - Creative developer">
@@ -62,5 +62,5 @@
     </script>
 
 
-<script type="text/javascript" src="bundle.acca2422fe782e970ae9.js"></script></body>
+<script type="text/javascript" src="bundle.46e5f4490851aade9282.js"></script></body>
 </html>
